--- a/styles/Titlebar.module.css
+++ b/styles/Titlebar.module.css
@@ -1,12 +1,12 @@
-.titlebar {
-  background: var(--titlebar-bg);
+.titleBar {
+  background: var(--titleBar-bg);
   height: 30px;
   padding: 0 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 0.85rem;
   border-bottom: 1px solid #191d20;
 }
